Logo size fixed on mobile and games reversed on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ img {
 
 @media only screen and (max-width: 479px) {
   .container {
-    max-width: 300px; } }
+    max-width: 800px; } }
 
 .no-gutters {
   margin-left: 0;
@@ -5367,7 +5367,7 @@ header.header.header-static {
   }
   
   @media only screen and (max-width: 767px) {
-    a.navbar-brand{width: 50%;}
+    a.navbar-brand{width: 75%;}
 
     .slider-image{
       min-height: 0vw; max-height: 70vw;
